--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "import/no-extraneous-dependencies":  0,
     "max-len": [2, { "code": 80 }],
     "no-confusing-arrow": 0,
+    "no-constant-condition": 0,
     "no-multi-spaces": [2, {
       "exceptions": {
         "AssignmentExpression": true,
